--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="question-container" class="hide">
                 <div id="question">Question</div>
                 <div id="answer-buttons" class="btn-grid"></div>
-                <!--Buttons were only used as a reference in the beginning. Acutal questions are in script.js file-->
+                <!--Buttons were only used as a reference in the beginning. Acutal questions and answers are in script.js file-->
                 <!--<button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
