added a functional timer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <div class="container">
             <div id="question-container" class="hide">
+                <div id="timer"></div>
+                <p id="timerDisplay"></p>
                 <div id="question">Question</div>
                 <div id="answer-buttons" class="btn-grid"></div>
                 <!--Buttons were only used as a reference in the beginning. Acutal questions and answers are in script.js file-->
